VenPlamo PPW Update

--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,8 @@
                         <h2 class="section-title-small">Informasi Kontak</h2>
                         <p>Anda juga bisa menghubungi kami melalui detail di bawah ini atau datang langsung ke lokasi kami.</p>
                         <ul class="contact-details-list">
-                            <li><strong>📍 Alamat:</strong> Jl. Jenderal Sudirman No. 123, Jakarta Selatan, Indonesia</li>
-                            <li><strong>📞 Telepon:</strong> (021) 555-0123</li>
+                            <li><strong>📍 Alamat:</strong> Jl. Raya Condet No. 34, Jakarta Selatan, Indonesia</li>
+                            <li><strong>📞 Telepon:</strong> (021) 8566 7891</li>
                             <li><strong>✉️ Email Umum:</strong> info@venplamo.com</li>
                             <li><strong>✉️ Dukungan:</strong> support@venplamo.com</li>
                             <li><strong>✉️ Partnership:</strong> partnership@venplamo.com</li>
